finishing the redesign

--- a/mcr/Harperc.html
+++ b/mcr/Harperc.html
@@ -1,95 +1,78 @@
-<html>
+---
+layout: mcr_layout
+---
 
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-<title>Harper Cemetery</title>
-</head>
+<div class="mcr-title">Harper Cemetery</div>
 
-<body>
-
-<p><font SIZE="2">&nbsp;</p>
-
-<p ALIGN="CENTER">HARPER CEMETERY</p>
-
-<p ALIGN="CENTER">Harper, Malheur County, Oregon</p>
+<p>Harper, Malheur County, Oregon</p>
 
 <p>The old Harper Cemetery is on the hill overlooking Harper. It is known to have had five
 graves there at one time. One of the graves has been moved away. All of the facts that are
 available about this old burial place are given here. T 19S, R 43E, S 29. Records compiled
-by Grant and Sybil Higley</font></p>
+by Grant and Sybil Higley</p>
 
-<table BORDER="1" CELLSPACING="1" CELLPADDING="7" WIDTH="590">
-  <tr>
-    <td WIDTH="16%"><font SIZE="2"><b><p ALIGN="CENTER">Last Name</b></font></td>
-    <td WIDTH="20%"><font SIZE="2"><b><p ALIGN="CENTER">First Name</b></font></td>
-    <td WIDTH="18%"><font SIZE="2"><b><p ALIGN="CENTER">Birth Date</b></font></td>
-    <td WIDTH="18%"><font SIZE="2"><b><p ALIGN="CENTER">Death Date</b></font></td>
-    <td WIDTH="27%"><font SIZE="2"><b><p ALIGN="CENTER">Other Information</b></font></td>
+<table class="mcr-cemeteryTable">
+  <tr class="mcr-cemeteryTable-titleRow">
+    <td>Last Name</td>
+    <td>First Name</td>
+    <td>Birth Date</td>
+    <td>Death Date</td>
+    <td>Other Information</td>
   </tr>
   <tr>
-    <td WIDTH="16%"><font SIZE="2">Howard</font></td>
-    <td WIDTH="20%"><font SIZE="2">one of the twins</font></td>
-    <td WIDTH="18%"><font SIZE="2">no dates</font></td>
-    <td WIDTH="18%">&nbsp;</td>
-    <td WIDTH="27%">&nbsp;</td>
+    <td >Howard</td>
+    <td>one of the twins</td>
+    <td>no dates</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
   </tr>
   <tr>
-    <td WIDTH="16%"><font SIZE="2">Lee</font></td>
-    <td WIDTH="20%"><font SIZE="2">Katie B.</font></td>
-    <td WIDTH="18%"><font SIZE="2">10 Aug 1875</font></td>
-    <td WIDTH="18%"><font SIZE="2">15 Dec 1918</font></td>
-    <td WIDTH="27%">&nbsp;</td>
+    <td>Lee</td>
+    <td>Katie B.</td>
+    <td>10 Aug 1875</td>
+    <td>15 Dec 1918</td>
+    <td>&nbsp;</td>
   </tr>
   <tr>
-    <td WIDTH="16%"><font SIZE="2">Mellon</font></td>
-    <td WIDTH="20%"><font SIZE="2">Baby</font></td>
-    <td WIDTH="18%"><font SIZE="2">22 Dec 1928</font></td>
-    <td WIDTH="18%"><font SIZE="2">22 Dec 1928</font></td>
-    <td WIDTH="27%"><font SIZE="2">Jas. Mellon, father</font></td>
+    <td>Mellon</td>
+    <td>Baby</td>
+    <td>22 Dec 1928</td>
+    <td>22 Dec 1928</td>
+    <td>Jas. Mellon, father</td>
   </tr>
   <tr>
-    <td WIDTH="16%"><font SIZE="2">Mogus</font></td>
-    <td WIDTH="20%"><font SIZE="2">Rosa May</font></td>
-    <td WIDTH="18%">&nbsp;</td>
-    <td WIDTH="18%"><font SIZE="2">2 Oct 1919</font></td>
-    <td WIDTH="27%"><font SIZE="2">Aged 20 Days</font></td>
+    <td>Mogus</td>
+    <td>Rosa May</td>
+    <td>&nbsp;</td>
+    <td>2 Oct 1919</td>
+    <td>Aged 20 Days</td>
   </tr>
   <tr>
-    <td WIDTH="16%"><font SIZE="2">Truax</font></td>
-    <td WIDTH="20%"><font SIZE="2">Marion F.</font></td>
-    <td WIDTH="18%">&nbsp;</td>
-    <td WIDTH="18%"><font SIZE="2">10 Aug 1938</font></td>
-    <td WIDTH="27%">&nbsp;</td>
+    <td>Truax</td>
+    <td>Marion F.</td>
+    <td>&nbsp;</td>
+    <td>10 Aug 1938</td>
+    <td>&nbsp;</td>
   </tr>
   <tr>
-    <td WIDTH="16%"><font SIZE="2">Trueax</font></td>
-    <td WIDTH="20%"><font SIZE="2">Baby</font></td>
-    <td WIDTH="18%"><font SIZE="2">no marker</font></td>
-    <td WIDTH="18%">&nbsp;</td>
-    <td WIDTH="27%">&nbsp;</td>
+    <td>Trueax</td>
+    <td>Baby</td>
+    <td>no marker</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
   </tr>
   <tr>
-    <td WIDTH="16%"><font SIZE="2">Trueax</font></td>
-    <td WIDTH="20%"><font SIZE="2">John Arthur</font></td>
-    <td WIDTH="18%"><font SIZE="2">no marker</font></td>
-    <td WIDTH="18%">&nbsp;</td>
-    <td WIDTH="27%">&nbsp;</td>
+    <td>Trueax</td>
+    <td>John Arthur</td>
+    <td>no marker</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
   </tr>
   <tr>
-    <td WIDTH="16%"><font SIZE="2">Trueax</font></td>
-    <td WIDTH="20%"><font SIZE="2">Mary Caroline</font></td>
-    <td WIDTH="18%"><font SIZE="2">no dates</font></td>
-    <td WIDTH="18%">&nbsp;</td>
-    <td WIDTH="27%">&nbsp;</td>
+    <td>Trueax</td>
+    <td>Mary Caroline</td>
+    <td>no dates</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
   </tr>
 </table>
-
-<p><font SIZE="2">&nbsp;</p>
-
-<p>&nbsp;</p>
-
-<p>&nbsp;</p>
-
-<p></font>&nbsp;</p>
-</body>
-</html>
