--- a/mcr/oldjuntura.html
+++ b/mcr/oldjuntura.html
@@ -1,35 +1,26 @@
-<html>
+---
+layout: mcr_layout
+---
+<div class="mcr-title">OLD CEMETERY</div>
 
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-<title>Old Cemetery Juntura</title>
-</head>
+<p>Juntura, Oregon</p>
 
-<body>
+<p>1983</p>
 
+<p>(R38E T21S)</p>
 
-OLD CEMETERY
-
-Juntura, Oregon
-
-1983
-
-(R38E T21S)
-
-This cemetery is located an Highway 20, 1/4 mile west of town. The cemetery is fenced
+<p>This cemetery is located an Highway 20, 1/4 mile west of town. The cemetery is fenced
 in and located in the middle of a rancher's field. It is overgrown with greasewood. Cows
 have broken the fence and knocked over some headstones. Some of the graves are unmarked
-and obliterated by animals. Records compiled by Grant and Sybil Higley.
+and obliterated by animals. Records compiled by Grant and Sybil Higley.</p>
 
-&nbsp;
-
-<table BORDER="1" CELLSPACING="1" CELLPADDING="7">
-  <tr>
-    <td>LAST NAME</td>
-    <td>FIRST NAME</td>
-    <td>BIRTH DATE</td>
-    <td>DEATH DATE</td>
-    <td>OTHER INFORMATION</td>
+<table class="mcr-cemeteryTable">
+  <tr class="mcr-cemeteryTable-titleRow">
+    <td>Last Name</td>
+    <td>First Name</td>
+    <td>Birth Date</td>
+    <td>Death Date</td>
+    <td>Other Information</td>
   </tr>
   <tr>
     <td>DULL</td>
@@ -88,7 +79,3 @@ and obliterated by animals. Records compiled by Grant and Sybil Higley.
     <td>J.A. &amp; S. E. Double Stone</td>
   </tr>
 </table>
-
-&nbsp;
-</body>
-</html>
