--- a/mcr/owyheec.html
+++ b/mcr/owyheec.html
@@ -1,25 +1,18 @@
-<html>
+---
+layout: mcr_layout
+---
+<div class="mcr-title">Owyhee Cemetery</div>
 
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-<title>Owyhee Cemetery</title>
-</head>
+<p>Located on Hwy 201 south of Nyssa, Oregon. T 15S, 46E, 26. Records compiled by Della
+Bybee and Sybil Higley.</p>
 
-<body>
-
-
-OWYHEE CEMETERY
-
-Located on Hwy 201 south of Nyssa, Oregon. T 15S, 46E, 26. Records compiled by Della
-Bybee and Sybil Higley.
-
-<table BORDER="1" CELLSPACING="1" CELLPADDING="7">
-  <tr>
-    <td>LAST NAME</td>
-    <td>FIRST NAME</td>
-    <td>BIRTH DATE</td>
-    <td>DEATH DATE</td>
-    <td>OTHER INFORMATION</td>
+<table class="mcr-cemeteryTable">
+  <tr class="mcr-cemeteryTable-titleRow">
+    <td>Last Name</td>
+    <td>First Name</td>
+    <td>Birth Date</td>
+    <td>Death Date</td>
+    <td>Other Information</td>
   </tr>
   <tr>
     <td>ADAMS</td>
@@ -3573,7 +3566,3 @@ Bybee and Sybil Higley.
     <td>Cpl. US Army WW 1</td>
   </tr>
 </table>
-
-&nbsp;
-</body>
-</html>
