--- a/mcr/pioneeroc.html
+++ b/mcr/pioneeroc.html
@@ -1,31 +1,23 @@
-<html>
+---
+layout: mcr_layout
+---
 
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-<title>Pioneer Cemetery - Ontario, Oregon</title>
-</head>
+<div class="mcr-title">Pioneer Cemetery</div>
 
-<body>
+<p>Pioneer Road (North of Ontario, Oregon)</p>
 
-
-PIONEER CEMETERY
-
-Pioneer Road (North of Ontario, Oregon)
-
-&nbsp;
-
-High on the Dead Ox Flats over-looking the Snake River is indeed a pioneer cemetery.
+<p>High on the Dead Ox Flats over-looking the Snake River is indeed a pioneer cemetery.
 There are no markers at all, nor are there any mounds to indicate the graves, but several
 parties have information concerning those persons who were buried there. All known names
-and dates are listed on this page. 
+and dates are listed on this page. </p>
 
-<table BORDER="1" CELLSPACING="1" CELLPADDING="7">
-  <tr>
-    <td>LAST NAME</td>
-    <td>FIRST NAME</td>
-    <td>BIRTH DATE</td>
-    <td>DEATH DATE</td>
-    <td>OTHER INFORMATION</td>
+<table class="mcr-cemeteryTable">
+  <tr class="mcr-cemeteryTable-titleRow">
+    <td>Last Name</td>
+    <td>First Name</td>
+    <td>Birth Date</td>
+    <td>Death Date</td>
+    <td>Other Information</td>
   </tr>
   <tr>
     <td>Applegate</td>
@@ -97,7 +89,3 @@ and dates are listed on this page.
     <td>&nbsp;</td>
   </tr>
 </table>
-
-&nbsp;
-</body>
-</html>
