--- a/mcr/riverside.html
+++ b/mcr/riverside.html
@@ -1,22 +1,16 @@
-<html>
+---
+layout: mcr_layout
+---
 
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-<title>Riverside Cemetery</title>
-</head>
+<div class="mcr-title">RIVERSIDE CEMETERY</div>
 
-<body>
+<p>Riverside, Malheur County, Oregon</p>
 
+<p>At a junction of South and Middle Fork of Malheur River near Riverside, Oregon. T 23, R
+37E, S 22. Records compiled by Grant and Sybil Higley.</p>
 
-RIVERSIDE CEMETERY
-
-Riverside, Malheur County, Oregon
-
-At a junction of South and Middle Fork of Malheur River near Riverside, Oregon. T 23, R
-37E, S 22. Records compiled by Grant and Sybil Higley.
-
-<table BORDER="1" CELLSPACING="1" CELLPADDING="7">
-  <tr>
+<table class="mcr-cemeteryTable">
+  <tr class="mcr-cemeteryTable-titleRow">
     <td>Last Name</td>
     <td>First Name</td>
     <td>Birth Date</td>
@@ -221,6 +215,3 @@ At a junction of South and Middle Fork of Malheur River near Riverside, Oregon. 
   </tr>
 </table>
 
-&nbsp;
-</body>
-</html>
