--- a/mcr/succorcreekc.html
+++ b/mcr/succorcreekc.html
@@ -1,36 +1,28 @@
-<html>
+---
+layout: mcr_layout
+---
 
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-<title>Succor Creek Cemetery</title>
-</head>
+<div class="mcr-title">Succor Creek</div>
 
-<body>
+<p>MC BRIDE CREEK ROAD CEMETERY</p>
 
+<p>1983</p>
 
-SUCCOR CREEK
+<p>T 25 S R 46E</p>
 
-MC BRIDE CREEK ROAD CEMETERY
-
-1983
-
-T 25 S R 46E
-
-&nbsp;
-
-This cemetery is located off Highway 95, 1.9 miles west of the Idaho Oregon boarder. It
+<p>This cemetery is located off Highway 95, 1.9 miles west of the Idaho Oregon boarder. It
 is located in a fenced pasture of about 2 acres with only one stone remaining upright, the
 animals have knocked over all the rest. There were a total five stones with ten
 inscriptions. We were able to stand the ROSE family stone in an upright position. Records
-compiled by Grant and Sybil Higley.
+compiled by Grant and Sybil Higley.</p>
 
-<table BORDER="1" CELLSPACING="1" CELLPADDING="7">
-  <tr>
-    <td>LAST NAME</td>
-    <td>FIRST NAME</td>
-    <td>BIRTH DATE</td>
-    <td>DEATH DATE</td>
-    <td>OTHER INFORMATION</td>
+<table class="mcr-cemeteryTable">
+  <tr class="mcr-cemeteryTable-titleRow">
+    <td>Last Name</td>
+    <td>First Name</td>
+    <td>Birth Date</td>
+    <td>Death Date</td>
+    <td>Other Information</td>
   </tr>
   <tr>
     <td>ROSE</td>
@@ -107,7 +99,3 @@ compiled by Grant and Sybil Higley.
     <td>Age 65 years</td>
   </tr>
 </table>
-
-&nbsp;
-</body>
-</html>
