--- a/mcr/sunsetc.html
+++ b/mcr/sunsetc.html
@@ -1,33 +1,23 @@
-<html>
+---
+layout: mcr_layout
+---
 
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-<title>Sunset Cemetery</title>
-</head>
+<div class="mcr-title">Sunset Cemetery</div>
 
-<body>
+<p>Aka St. Johns Catholic Cemetery</p>
 
+<p>Sunset Drive, Ontario, Oregon</p>
 
-SUNSET CEMETERY
+<p>On Sunset Drive off S.W. 4th, Ontario, Now part of Evergreen Cemetery. T
+18S, R47E, S 8. Records compiled by Della Bybee and Sybil Higley.</p>
 
-Aka St. Johns Catholic Cemetery
-
-Sunset Drive, Ontario, Oregon
-
-On Sunset Drive off S.W. 4<sup>th</sup>, Ontario, Now part of Evergreen Cemetery. T
-18S, R47E, S 8. Records compiled by Della Bybee and Sybil Higley.
-
-&nbsp;
-
-&nbsp;
-
-<table BORDER="1" CELLSPACING="1" CELLPADDING="7">
-  <tr>
-    <td>LAST NAME</td>
-    <td>FIRST NAME</td>
-    <td>BIRTH DATE</td>
-    <td>DEATH DATE</td>
-    <td>OTHER INFORMATION</td>
+<table class="mcr-cemeteryTable">
+  <tr class="mcr-cemeteryTable-titleRow">
+    <td>Last Name</td>
+    <td>First Name</td>
+    <td>Birth Date</td>
+    <td>Death Date</td>
+    <td>Other Information</td>
   </tr>
   <tr>
     <td>ACHURRA</td>
@@ -3364,7 +3354,3 @@ On Sunset Drive off S.W. 4<sup>th</sup>, Ontario, Now part of Evergreen Cemetery
     <td>&nbsp;</td>
   </tr>
 </table>
-
-&nbsp;
-</body>
-</html>
