--- a/mcr/valleyviewc.html
+++ b/mcr/valleyviewc.html
@@ -1,23 +1,20 @@
-<HTML>
-<HEAD>
-<TITLE>Vally View Cemetery </TITLE></HEAD>
-<BODY>
-<center>VALLEY VIEW CEMETERY 
-Vale, Oregon</center>
-2 Miles Northwest of Vale.  T 18S,  R 45E, S 17 Records compiled by Della Bybee, and Sybil Higley.
-<TABLE BORDER="1" BORDERCOLOR="BLACK" CELLSPACING="0">
-<TR>
-<TD>
-<B>LAST NAME</B>
-<TD>
-<B>FIRST NAME</B>
-<TD>
-<B>BIRTH DATE</B>
-<TD>
-<B>DEATH DATE</B>
-<TD>
-<B>OTHER INFORMATION</B>
-<TR>
+---
+layout: mcr_layout
+---
+<div class="mcr-title">Valley View Cemetery</div>
+
+<p>Vale, Oregon</p>
+<p> 2 Miles Northwest of Vale.  T 18S,  R 45E, S 17 Records compiled by Della Bybee, and Sybil Higley.</p>
+
+<table class="mcr-cemeteryTable">
+  <tr class="mcr-cemeteryTable-titleRow">
+    <td>Last Name</td>
+    <td>First Name</td>
+    <td>Birth Date</td>
+    <td>Death Date</td>
+    <td>Other Information</td>
+  </tr>
+  <TR>
 <TD>
 ACEVEZ
 <TD>
@@ -16448,4 +16445,4 @@ Matilda
 10 Jun 1879
 <TD>
 25 May 1926
-<TD></TABLE></BODY></HTML>
+<TD></TABLE>
