--- a/mcr/westfallc.html
+++ b/mcr/westfallc.html
@@ -1,28 +1,20 @@
-<html> 
+---
+layout: mcr_layout
+---
+
+<div class="mcr-title">Westfall Cemetery</div>
  
-<head> 
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1252"> 
-<title>Westfall Cemetery</title> 
-</head> 
+<p>Westfall, Malheur, Oregon</p>
  
-<body> 
+<p>T 18S, 45E Records compiled by Grant and Sybil Higley</p>
  
- 
-WESTFALL CEMETERY 
- 
-Westfall, Malheur, Oregon 
- 
-T 18S, 45E Records compiled by Grant and Sybil Higley 
- 
-&nbsp; 
- 
-<table BORDER="1" CELLSPACING="1" CELLPADDING="7"> 
-  <tr> 
-    <td>last name</td> 
-    <td>FIRST NAME</td> 
-    <td>BIRTH DATE</td> 
-    <td>DEATH DATE</td> 
-    <td>OTHER INFORMATION</td> 
+<table class="mcr-cemeteryTable">
+  <tr class="mcr-cemeteryTable-titleRow">
+    <td>Last Name</td>
+    <td>First Name</td>
+    <td>Birth Date</td>
+    <td>Death Date</td>
+    <td>Other Information</td>
   </tr> 
   <tr> 
     <td>ALLEN</td> 
@@ -907,7 +899,3 @@ T 18S, 45E Records compiled by Grant and Sybil Higley
     <td>&nbsp;</td> 
   </tr> 
 </table> 
- 
-&nbsp; 
-</body> 
-</html> 
