--- a/mcr/pioneervc.html
+++ b/mcr/pioneervc.html
@@ -1,25 +1,18 @@
-<html>
+---
+layout: mcr_layout
+---
 
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-<title>Pioneer Cemetery - Vale, Oregon</title>
-</head>
+<div class="mcr-title">Pioneer Cemetery</div>
 
-<body>
+<p>Vale, Oregon</p>
 
+<p>November 11, 1983</p>
 
-PIONEER CEMETERY
+<p>3/4 Mile North of Vale on Highway 26. T 182, R 45E, S 18-19. Records compiled by Grant
+and Sybil Higley.</p>
 
-Vale, Oregon
-
-November 11, 1983
-
-¾ Mile North of Vale on Highway 26. T 182, R 45E, S 18-19. Records compiled by Grant
-and Sybil Higley.&nbsp;
-
-
-<table BORDER="1" CELLSPACING="1" CELLPADDING="7">
-  <tr>
+<table class="mcr-cemeteryTable">
+  <tr class="mcr-cemeteryTable-titleRow">
     <td>Last Name</td>
     <td>First Name</td>
     <td>Birth Date</td>
@@ -1195,7 +1188,3 @@ and Sybil Higley.&nbsp;
     <td>Born in Italy, Came to Vale, Oregon in 1894 Died in Vale</td>
   </tr>
 </table>
-
-&nbsp;
-</body>
-</html>
