--- a/mcr/watsonc.html
+++ b/mcr/watsonc.html
@@ -1,28 +1,22 @@
-<html> 
+---
+layout: mcr_layout
+---
+
+<div class="mcr-title">Watson Cemetery</div>
  
-<head> 
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1252"> 
-<title>Watson Cemetery</title> 
-</head> 
- 
-<body> 
- 
- 
-WATSON CEMETERY 
- 
-Watson Oregon no longer exists. The Owyhee reservoir now covers the town of Watson. The
+<p>Watson Oregon no longer exists. The Owyhee reservoir now covers the town of Watson. The
 cemetery is up on a hill above where the town used to be. It is accessible only by boat.
 The cemetery is located on the south side of Owyhee reservoir. Records from this cemetery
 were compiled by Grant and Sybil Higley, with help from the Malheur County Sheriffs
-Department. 
+Department.</p>
  
-<table BORDER="1" CELLSPACING="1" CELLPADDING="7"> 
-  <tr> 
-    <td>Last name</td> 
-    <td>first name</td> 
-    <td>birth date</td> 
-    <td>death date</td> 
-    <td>other information</td> 
+<table class="mcr-cemeteryTable">
+  <tr class="mcr-cemeteryTable-titleRow">
+    <td>Last Name</td>
+    <td>First Name</td>
+    <td>Birth Date</td>
+    <td>Death Date</td>
+    <td>Other Information</td>
   </tr> 
   <tr> 
     <td>Franks</td> 
@@ -54,7 +48,4 @@ Department.
   </tr> 
 </table> 
  
- 
-There are 3 unmarked graves 
-</body> 
-</html> 
+<p>There are 3 unmarked graves </p>
