Redesign and html cleanup.

--- a/mcr/index.html
+++ b/mcr/index.html
@@ -1,14 +1,13 @@
-<html>
+---
+layout: mcr_layout
+---
 
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-<title>Cemetery Records of Malheur County, Oregon</title>
-<meta name="description" content="Cemetery Records for all of the cemeteries of Malheur County Oregon">
-<meta name="keywords" contenet="malheur, cemetery, cemetery records, oregon, cemetery information, malheur county">
-</head>
+<h1> Malheur County Records </h1>
 
-<frameset framespacing="0" border="false" frameborder="0" cols="204,*">
-  <frame name="contents" target="main" src="nav.htm" scrolling="auto">
-  <frame name="main" src="main.htm" scrolling="auto">
-</frameset>
-</html>
+<u>November 2002</u> - <a href="fairviewcemetery.pdf">Fairveiw Cemetery</a> has been updated. Patty Theurer sent me an updated list, so thanks to her!
+<p>New Addition!! <a href="deathnotices.htm" alt="Abstracts of Death Certificates!">Abstracts of Death Certificates from Malheur County</a> Contributed by Sybil Higley</p>
+
+<p>Compiled by Sybil Higley, Grant Higley, Barbara McCormick, her sister Pat, and includes assistance from the Malheur County Sherrifs Department. Digitized by Jonathan White.</p> 
+
+<p>Currently we have all of the known cemeteries and gravesites in Malheur County Oregon.</p>
+
